# CPU-RayTracer

./: RTX.sln
RayTracer/: CMakeLists.txt  RayTracer.vcxproj  RayTracer.vcxproj.filters
RayTracer/header/: App.h  Image.h
RayTracer/make/: makefile.txt
RayTracer/src/: App.cpp  Image.cpp  main.cpp
